<resources>
    <string name="app_name">ProtectME</string>
    <string name="action_settings">Settings</string>
    <string name="kidnapbtn">K</string>
    <string name="robberybtn">R</string>
    <string name="evidencebtn">E</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_details">History Details</string>
    <string name="guide_settings">Guide</string>
    <string name="history_settings">History</string>
    <string name="family_settings">Family</string>
    <string name="logout_setting">Logout</string>

    <string name="title_activity_login">Protect ME -Log In</string>
    <string name="picturebtn">Picture</string>
    <string name="videobtn">Video</string>
    <string name="recordstartbtn">Start</string>
    <string name="recordstopbtn">Stop</string>
    <string name="recorduploadbtn">Upload</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">User LogIn</string>
    <string name="error_invalid_email"> Email invalid</string>
    <string name="error_invalid_password"> Password is too short</string>
    <string name="error_incorrect_password">Password incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!--string to Family Activity-->
    <string name="familyname">Name</string>
    <string name="familynumber">Number</string>

    <!-- string to history details - start -->
    <string name="caseid">Case ID</string>
    <string name="casestatus">Status</string>
    <string name="casedate">Date</string>
    <string name="casetime">Time</string>
    <string name="casetype">Type</string>
    <string name="cases"></string>

    <!-- string to history details - end-->
    <string name="parse_app_id">D6x8K7StgtiGA2pmA2v3MkB4fJ1wpbZUBV4HCbbB</string>
    <string name="parse_client_key">bFy7KDqZ7ObW4O1sou1Yaq7NbuJkyMoSNPIZvdQO</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_evidence_select">EvidenceSelectActivity</string>
    <string name="title_activity_family">FamilyActivity</string>
</resources>
