<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homebackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.protectme.HomeActivity"
    tools:showIn="@layout/activity_home">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imgHome"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/homelogo"
        android:layout_centerHorizontal="true"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_below="@+id/imgHome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="0px"
        android:padding="0px"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Latitude"
            android:id="@+id/txtLatShow"
            style="@style/latlongstyle"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6.972245"
            android:layout_gravity="center"
            style="@style/latlongstyle"
            android:id="@+id/txtLatitude"
            android:layout_marginLeft="50dp"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_below="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="0px"
        android:padding="0px"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="0dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude"
            android:layout_gravity="center_vertical"
            style="@style/latlongstyle"
            android:id="@+id/txtLongShow"
           android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="79.356632"
            style="@style/latlongstyle"
            android:id="@+id/txtLongitude"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
           />

</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardaddress"
        android:layout_gravity="center"
        android:layout_below="@+id/card_view2"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        android:padding="0px"
        android:elevation="5dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:id="@+id/txtaddress"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp"
            android:text="Address.."
            />
    </android.support.v7.widget.CardView>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <ImageButton
            style="@style/HomeBtn"
            android:text="@string/evidencebtn"
            android:background="@drawable/home_buttons"
            android:id="@+id/btnEvidence"
            android:layout_gravity="bottom"
            android:layout_width="@dimen/home_btn_width"
            android:onClick="evidenceHomeAvtivity"
            android:src="@drawable/camera"

            />

        <ImageButton
            android:text="@string/kidnapbtn"
            android:id="@+id/btnKidnap"
            style="@style/HomeBtn"
            android:src="@drawable/run"
            android:layout_gravity="bottom"
            android:layout_width="@dimen/home_btn_width"
            android:background="#E74C3C"
            android:onClick="startRealtimeTrack"

            />
        <ImageButton
            style="@style/HomeBtn"
            android:id="@+id/btnRobbery"
            android:text="@string/robberybtn"
            android:onClick="startStaticLocationTrack"
            android:background="@drawable/home_buttons"
            android:src="@drawable/marker"
            android:layout_width="@dimen/home_btn_width"
            android:layout_gravity="bottom"
            />

    </LinearLayout>
</RelativeLayout>

