<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fff"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.protectme.HistoryActivity"
    tools:showIn="@layout/activity_history">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_below="@+id/btnLoad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/historylist"
            android:dividerHeight="0dp"
            />
    </android.support.v4.widget.SwipeRefreshLayout>




</RelativeLayout>
